--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,9 @@
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">	
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/style.css" type="text/css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="/assets/js/burgers.js"></script>
 
 
     
@@ -20,3 +19,5 @@
 
 
 </html>
+
+	<script src="/js/burgers.js"></script>
