--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="../../public/assets/js/burgers.js"></script>
+	<script src="/js/burgers.js"></script>
 
 
     
@@ -18,3 +18,5 @@
 
 
 </html>
+
+<script></script>
